# ka-backend

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml
.github/workflows/: main.yml
ka_backend/: __init__.py  app.py  models.py  plugins.py  responses.py
ka_backend/helper/: database.py  files.py  settings.py
ka_backend/routes/: auth.py  competition.py  sig.py  story.py  student.py
ka_backend/routes/admin/: __init__.py  competition.py  sig.py  story.py  student.py
ka_backend/sso/: __init__.py  client.py
ka_backend/templates/: base.html  index.html
ka_backend/templates/competition/: edit.html  index.html
ka_backend/templates/sig/: edit.html  index.html
ka_backend/templates/story/: edit.html  index.html
ka_backend/templates/student/: edit.html  index.html
migration/: env.py
migration/versions/: 0d7cf6acc07f_add_column_indexing.py  175b53352d7d_add_admin_field.py  22da09c6f739_bump_twitter_char_limit.py  3aa8d47393fb_remove_karya_from_student_database.py  52b2cb0c0545_add_stories.py  550a7843a982_initial.py  5fcd4f779a6a_add_about_me_on_db.py  6de34633da3d_mark_almost_all_field_as_optional.py  a052cc7b8676_add_missing_fields.py  ec380ae57402_add_sig_and_competitions.py  fe212d1dcec7_add_username_field.py
tests/: conftest.py  test_app.py  test_competition.py  test_ka_backend.py  test_routes.py  test_sig.py  test_stories.py  test_students.py
tests/data/: competitions.json  sig.json  stories.json  users.json
