[tool.poetry]
name = "ka-backend"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
ormar = "^0.10.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
black = "21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
