[tool.poetry]
name = "ka-backend"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.68.1"}
ormar = "^0.10.19"
aiosqlite = "^0.17.0"
fastapi-login = "^1.7.2"
httpx = "^0.19.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
black = "21.7b0"
alembic = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
