[tool.poetry]
name = "ka-backend"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
ormar = "^0.10.19"
aiosqlite = "^0.17.0"
fastapi-login = "^1.7.2"
httpx = "^0.19.0"
xmltodict = "^0.12.0"
mysqlclient = { version = "^2.0.3", extras = ["mysql"] }
aiomysql = { version = "^0.0.21", extras = ["mysql"] }
psycopg2 = {version = "^2.9.1", extras = ["pgsql"]}
asyncpg = {version = "^0.24.0", extras = ["pgsql"]}
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
Jinja2 = "^3.0.2"
python-multipart = "^0.0.5"
itsdangerous = "^2.0.1"
sentry-sdk = "^1.4.3"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
black = "21.7b0"
alembic = "^1.7.3"
pytest-asyncio = "^0.16.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
